--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <!-- header design -->
     <header class="header">
-        <a href="#" class="logo">Pranjal's Portfolio</a>
+        <a href="#" class="logo">PRANJAL ADHIKARI</a>
         
         <i class='bx bx-menu' id="menu-icon"></i>
 
@@ -24,12 +24,30 @@
             <a href="#home" class="active">Home</a>
             <a href="#projects">Projects</a>
             <a href="#experience">Experience</a>
+            <a href="#contact">Contact</a>
         </nav>
     </header>
 
 
     <!-- home section design -->
-    
+    <section class="home" id="home">
+        <div class="home-content">
+            <h3>Welcome to my portfolio!</h3>
+            <h1>My name is Pranjal Adhikari and am a student at the <em1>University of Texas at Austin</em1>. 
+                I am slated to earn my BS in Computational Engineering in May 2025, with interest in both
+                frontend and backend development.</h1>
+            <div class="social-media">
+                <a href="#"><i class='bx bxl-github' ></i></a>
+                <a href="#"><i class='bx bx-envelope' ></i></a>
+            </div>
+            <a href="#" class="btn">Resume</a>
+        </div>
+
+        <div class="home-img">
+            <img src="images/profilePic.png" alt="">
+        </div>
+
+    </section>
 
 
 
