added skills section

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pranjal Adhikari</title>
+    <title>Pranjal Adhikari's Portfolio</title>
 
     <!-- box icons -->
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
@@ -22,6 +22,7 @@
 
         <nav class="navbar">
             <a href="#home" class="active">Home</a>
+            <a href="#skills">Skills</a>
             <a href="#projects">Projects</a>
             <a href="#experience">Experience</a>
             <a href="#contact">Contact</a>
@@ -33,7 +34,7 @@
     <section class="home" id="home">
         <div class="home-content">
             <h3>Welcome to my portfolio!</h3>
-            <h1>My name is Pranjal Adhikari and am a student at the <em1>University of Texas at Austin</em1>. 
+            <h1>My name is Pranjal Adhikari and am a student at the University of Texas at Austin. 
                 I am slated to earn my BS in Computational Engineering in May 2025, with interest in both
                 frontend and backend development.</h1>
             <div class="social-media">
@@ -50,14 +51,26 @@
     </section>
 
 
+    <!-- skills section design -->
+    <section class="skills" id="skills">
+        <h2 class="heading">Languages & Technologies</h2>
+
+        <div class="LangAndTech">
+            <i class='bx bxl-python'></i>
+            
+        </div>
 
 
+    </section>
 
-    <!-- about section design -->
+    <!-- projects section design -->
+    <section class="projects" id="projects"></section>
+        <div class="projects-content">
+            <h2 class="heading"></h2>
+        </div>
 
-    <!-- services section design -->
 
-    <!-- portfolio section design -->
+    <!-- experience section design -->
 
     <!-- contact section design -->
 
