lang icons and links

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <!-- box icons -->
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
 
+    <!-- font awesome icons -->
+    <script src="https://kit.fontawesome.com/0c84c0a6fe.js" crossorigin="anonymous"></script>
+
     <!-- custom css -->
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -35,28 +38,51 @@
         <div class="home-content">
             <h3>Welcome to my portfolio!</h3>
             <h1>My name is Pranjal Adhikari and am a student at the University of Texas at Austin. 
-                I am slated to earn my BS in Computational Engineering in May 2025, with interest in both
-                frontend and backend development.</h1>
+                I am slated to earn my BS in Computational Engineering in May 2025.</h1>
             <div class="social-media">
-                <a href="#"><i class='bx bxl-github' ></i></a>
-                <a href="#"><i class='bx bx-envelope' ></i></a>
+                <a href="https://github.com/pranjaladhi" target="_blank" rel="noopener noreferrer"><i class='bx bxl-github' ></i></a>
+                <a href="#" target="_blank" rel="noopener noreferrer"><i class='bx bx-envelope' ></i></a>
             </div>
-            <a href="#" class="btn">Resume</a>
+            <a href="assets/PranjalAdhikariResume_v2.pdf" target="_blank" rel="noopener noreferrer" class="btn">Resume</a>
         </div>
 
         <div class="home-img">
-            <img src="images/profilePic.png" alt="">
+            <img src="assets/images/profilePic.png" alt="">
         </div>
-
     </section>
 
 
     <!-- skills section design -->
     <section class="skills" id="skills">
-        <h2 class="heading">Languages & Technologies</h2>
+        <h2>Languages & Technologies</h2>
+        
+        <div class="LangAndTech-content">
+            <a href="" class="Icon">
+                <div class="name">Python</div>
+                <i class='bx bxl-python'></i>
+            </a>
+            <a href="" class="Icon">
+                <div class="name">C++</div>
+                <i class='bx bxl-c-plus-plus'></i>
+            </a>
+            <a href="" class="Icon">
+                <div class="name">R</div>
+                <i class="fa-brands fa-r-project"></i>
+            </a>
+            <a href="" class="Icon">
+                <div class="name">HTML</div>
+                <i class='bx bxl-html5'></i>
+            </a>
+            <a href="" class="Icon">
+                <div class="name">CSS</div>
+                <i class='bx bxl-css3' ></i>
+            </a>
+            <a href="" class="Icon">
+                <div class="name">Docker</div>
+                <i class='bx bxl-docker' ></i>
+            </a>
 
-        <div class="LangAndTech">
-            <i class='bx bxl-python'></i>
+
             
         </div>
 
