--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
                 I am slated to earn my BS in Computational Engineering in May 2025.</h1>
             <div class="social-media">
                 <a href="https://github.com/pranjaladhi" target="_blank" rel="noopener noreferrer"><i class='bx bxl-github' ></i></a>
-                <a href="#" target="_blank" rel="noopener noreferrer"><i class='bx bx-envelope' ></i></a>
+                <a href="mailto:pranjal.adhikari@gmail.com" target="_blank" rel="noopener noreferrer"><i class='bx bx-envelope' ></i></a>
+                <a href="tel:+14058376201" target="_blank" rel="noopener noreferrer"><i class='bx bx-phone' ></i></i></a>
             </div>
             <a href="assets/PranjalAdhikariResume_v2.pdf" target="_blank" rel="noopener noreferrer" class="btn">Resume</a>
         </div>
@@ -59,27 +60,29 @@
         <div class="LangAndTech-content">
             <a href="" class="Icon">
                 <div class="name">Python</div>
-                <i class='bx bxl-python'></i>
-            </a>
-            <a href="" class="Icon">
-                <div class="name">C++</div>
-                <i class='bx bxl-c-plus-plus'></i>
+                    <i class='bx bxl-python'></i>
             </a>
             <a href="" class="Icon">
                 <div class="name">R</div>
-                <i class="fa-brands fa-r-project"></i>
+                    <i class="fa-brands fa-r-project"></i>
+            </a>
+            <a href="" class="Icon">
+                <div class="name">C++</div>
+                    <i class='bx bxl-c-plus-plus'></i>
             </a>
             <a href="" class="Icon">
                 <div class="name">HTML</div>
-                <i class='bx bxl-html5'></i>
+                    <i class='bx bxl-html5'></i>
             </a>
             <a href="" class="Icon">
                 <div class="name">CSS</div>
-                <i class='bx bxl-css3' ></i>
+                    <i class='bx bxl-css3' ></i>
             </a>
             <a href="" class="Icon">
                 <div class="name">Docker</div>
-                <i class='bx bxl-docker' ></i>
+                <div class="">
+                    <i class='bx bxl-docker' ></i>
+                </div>
             </a>
 
 
@@ -97,8 +100,11 @@
 
 
     <!-- experience section design -->
+    <section class="experience" id="experience"></section>
+
 
     <!-- contact section design -->
+    <section class="contact" id="contact"></section>
 
     <!-- footer design -->
 
