--- a/index.html
+++ b/index.html
@@ -87,12 +87,12 @@
     </section>
 
     <!-- projects section design -->
-    <section class="projects" id="projects"></section>
+    <section class="projects" id="projects">
         <h2 class="heading">Projects</h2>
 
         <div class="projects-container">
             <div class="projects-box">
-                <img src="" alt="">
+                <img src="/assets/images/microscope.jpg" alt="">
                 <div class="projects-layer">
                     <h4>Diagnosis API</h4>
 
@@ -101,7 +101,7 @@
             </div>
 
             <div class="projects-box">
-                <img src="" alt="">
+                <img src="/assets/images/ISS.jpg" alt="">
                 <div class="projects-layer">
                     <h4>ISS Tracker</h4>
 
@@ -109,17 +109,18 @@
                 </div>
             </div>
 
-            <div class="projects-box">
+            <!-- <div class="projects-box">
                 <img src="" alt="">
                 <div class="projects-layer">
                     <h4>Testing</h4>
 
                     <a href=""><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
-            </div>
+            </div> -->
             
         </div>
-
+    
+    </section>
 
     <!-- experience section design -->
     <section class="experience" id="experience"></section>
