--- a/index.html
+++ b/index.html
@@ -92,31 +92,31 @@
 
         <div class="projects-container">
             <div class="projects-box">
-                <img src="/assets/images/microscope.jpg" alt="">
+                <img src="/assets/images/damaged-buildings.jpg" alt="">
                 <div class="projects-layer">
-                    <h4>Diagnosis API</h4>
-
-                    <a href=""><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    <h4>Building Damage Assessment Using Neural Networks</h4>
+                    <p>Neural network model to assess building damage</p>
+                    <a href="https://github.com/pranjaladhi/coe-379l/tree/main/project3" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
 
             <div class="projects-box">
-                <img src="/assets/images/ISS.jpg" alt="">
+                <img src="/assets/images/microscope.jpg" alt="">
                 <div class="projects-layer">
-                    <h4>ISS Tracker</h4>
-
-                    <a href=""><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    <h4>Breast Cancer Diagnosis API</h4>
+                    <p>Flask application for breast cancer diagnosis</p>
+                    <a href="https://github.com/pranjaladhi/reports/tree/main/diagnosis_api" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
 
-            <!-- <div class="projects-box">
-                <img src="" alt="">
+            <div class="projects-box">
+                <img src="/assets/images/ISS-test.jpg" alt="">
                 <div class="projects-layer">
-                    <h4>Testing</h4>
-
-                    <a href=""><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    <h4>ISS Tracker</h4>
+                    <p>Application to query information regarding the International Space Station</p>
+                    <a href="https://github.com/pranjaladhi/reports/tree/main/iss_tracker" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
-            </div> -->
+            </div>
             
         </div>
     
