--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             </div>
 
             <div class="projects-box">
-                <img src="/assets/images/ISS-test.jpg" alt="">
+                <img src="/assets/images/ISS.jpg" alt="">
                 <div class="projects-layer">
                     <h4>ISS Tracker</h4>
                     <p>Application to query information regarding the International Space Station</p>
@@ -124,6 +124,7 @@
 
     <!-- experience section design -->
     <section class="experience" id="experience"></section>
+        <h2 class="heading">Experience</h2>
 
 
     <!-- contact section design -->
