--- a/index.html
+++ b/index.html
@@ -76,11 +76,16 @@
             </a>
             <a href="" class="Icon">
                 <div class="name">CSS</div>
-                    <i class='bx bxl-css3' ></i>
+                    <i class='bx bxl-css3'></i>
             </a>
             <a href="" class="Icon">
                 <div class="name">Docker</div>
-                    <i class='bx bxl-docker' ></i>
+                    <i class='bx bxl-docker'></i>
+                </div>
+            </a>
+            <a href="" class="Icon">
+                <div class="name">Kubernetes</div>
+                    <i class='bx bxl-kubernetes'></i>
                 </div>
             </a>
         </div>
@@ -92,11 +97,14 @@
 
         <div class="projects-container">
             <div class="projects-box">
-                <img src="/assets/images/damaged-buildings.jpg" alt="">
+                <img src="/assets/images/damaged-buildings-1.jpg" alt="">
                 <div class="projects-layer">
                     <h4>Building Damage Assessment Using Neural Networks</h4>
                     <p>Neural network model to assess building damage</p>
-                    <a href="https://github.com/pranjaladhi/coe-379l/tree/main/project3" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    <s>Languages: Python</s>
+                    <a href="https://github.com/pranjaladhi/coe-379l/tree/main/project3" target="_blank" rel="noopener noreferrer">
+                        <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                    </a>
                 </div>
             </div>
 
@@ -105,7 +113,9 @@
                 <div class="projects-layer">
                     <h4>Breast Cancer Diagnosis API</h4>
                     <p>Flask application for breast cancer diagnosis</p>
-                    <a href="https://github.com/pranjaladhi/reports/tree/main/diagnosis_api" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    <a href="https://github.com/pranjaladhi/reports/tree/main/diagnosis_api" target="_blank" rel="noopener noreferrer">
+                        <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                    </a>
                 </div>
             </div>
 
@@ -114,7 +124,9 @@
                 <div class="projects-layer">
                     <h4>ISS Tracker</h4>
                     <p>Application to query information regarding the International Space Station</p>
-                    <a href="https://github.com/pranjaladhi/reports/tree/main/iss_tracker" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    <a href="https://github.com/pranjaladhi/reports/tree/main/iss_tracker" target="_blank" rel="noopener noreferrer">
+                        <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                    </a>
                 </div>
             </div>
             
