added project and tech

--- a/index.html
+++ b/index.html
@@ -81,12 +81,14 @@
             <a href="" class="Icon">
                 <div class="name">Docker</div>
                     <i class='bx bxl-docker'></i>
-                </div>
             </a>
             <a href="" class="Icon">
                 <div class="name">Kubernetes</div>
                     <i class='bx bxl-kubernetes'></i>
-                </div>
+            </a>
+            <a href="" class="Icon">
+                <div class="name">Flask</div>
+                    <i class='bx bxl-flask' ></i>
             </a>
         </div>
     </section>
@@ -97,11 +99,11 @@
 
         <div class="projects-container">
             <div class="projects-box">
-                <img src="/assets/images/damaged-buildings-1.jpg" alt="">
+                <img src="/assets/images/damaged-building.jpg" alt="">
                 <div class="projects-layer">
                     <h4>Building Damage Assessment Using Neural Networks</h4>
                     <p>Neural network model to assess building damage</p>
-                    <s>Languages: Python</s>
+                    <s>Languages & Technologies: Python, Flask, Docker</s>
                     <a href="https://github.com/pranjaladhi/coe-379l/tree/main/project3" target="_blank" rel="noopener noreferrer">
                         <i class="fa-solid fa-arrow-up-right-from-square"></i>
                     </a>
@@ -112,7 +114,8 @@
                 <img src="/assets/images/microscope.jpg" alt="">
                 <div class="projects-layer">
                     <h4>Breast Cancer Diagnosis API</h4>
-                    <p>Flask application for breast cancer diagnosis</p>
+                    <p>Application to determine breast cancer diagnosis</p>
+                    <s>Languages & Technologies: Python, Flask, Docker, Kubernetes</s>
                     <a href="https://github.com/pranjaladhi/reports/tree/main/diagnosis_api" target="_blank" rel="noopener noreferrer">
                         <i class="fa-solid fa-arrow-up-right-from-square"></i>
                     </a>
@@ -123,8 +126,21 @@
                 <img src="/assets/images/ISS.jpg" alt="">
                 <div class="projects-layer">
                     <h4>ISS Tracker</h4>
-                    <p>Application to query information regarding the International Space Station</p>
+                    <p>Application to query real-time information regarding the International Space Station</p>
+                    <s>Languages & Technologies: Python, Flask, Docker</s>
                     <a href="https://github.com/pranjaladhi/reports/tree/main/iss_tracker" target="_blank" rel="noopener noreferrer">
+                        <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                    </a>
+                </div>
+            </div>
+
+            <div class="projects-box">
+                <img src="/assets/images/bridge.jpg" alt="">
+                <div class="projects-layer">
+                    <h4>Water Quality Impact on Traffic Incidents Analysis</h4>
+                    <p>Exploring the relationship between water quality and traffic incidents in Austin, TX</p>
+                    <s>Language: R</s>
+                    <a href="https://github.com/pranjaladhi/sds-322e/blob/main/project1/Project1.pdf" target="_blank" rel="noopener noreferrer">
                         <i class="fa-solid fa-arrow-up-right-from-square"></i>
                     </a>
                 </div>
