comment out unfinished

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
             <a href="#home" class="active">Home</a>
             <a href="#skills">Skills</a>
             <a href="#projects">Projects</a>
-            <a href="#experience">Experience</a>
-            <a href="#contact">Contact</a>
+            <!-- <a href="#experience">Experience</a>
+            <a href="#contact">Contact</a> -->
         </nav>
     </header>
 
@@ -150,23 +150,24 @@
     
     </section>
 
-    <!-- experience section design -->
+    <!-- experience section design --
     <section class="experience" id="experience"></section>
         <h2 class="heading">Experience</h2>
 
 
-    <!-- contact section design -->
+    <!- contact section design --
     <section class="contact" id="contact"></section>
 
-    <!-- footer design -->
+    <!- footer design --
+    
 
-    <!-- scroll reveal -->
+    <!- scroll reveal --
     <script src="https://unpkg.com/scrollreveal"></script>
 
-    <!-- typed js -->
+    <!- typed js --
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
 
-    <!-- custom js -->
-    <script src="script.js"></script>
+    <!- custom js --
+    <script src="script.js"></script> -->
   </body>
 </html>
