--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
             <a href="#home" class="active">Home</a>
             <a href="#skills">Skills</a>
             <a href="#projects">Projects</a>
-            <!-- <a href="#experience">Experience</a>
-            <a href="#contact">Contact</a> -->
+            <a href="#experience">Experience</a>
+            <a href="#contact">Contact</a>
         </nav>
     </header>
 
