--- a/index.html
+++ b/index.html
@@ -133,6 +133,18 @@
                     </a>
                 </div>
             </div>
+            
+            <div class="projects-box">
+                <img src="/assets/images/airpollution.jpg" alt="">
+                <div class="projects-layer">
+                    <h4>Air Pollution Predictions</h4>
+                    <p>Analysis of different models in predicting air pollution concentration in the U.S</p>
+                    <s>Language: R</s>
+                    <a href="https://github.com/pranjaladhi/sds-322e/blob/main/project1/Project1.pdf" target="_blank" rel="noopener noreferrer">
+                        <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                    </a>
+                </div>
+            </div>
 
             <div class="projects-box">
                 <img src="/assets/images/bridge.jpg" alt="">
