--- a/index.html
+++ b/index.html
@@ -83,10 +83,6 @@
                     <i class='bx bxl-docker'></i>
             </a>
             <a href="" class="Icon">
-                <div class="name">Kubernetes</div>
-                    <i class='bx bxl-kubernetes'></i>
-            </a>
-            <a href="" class="Icon">
                 <div class="name">Flask</div>
                     <i class='bx bxl-flask' ></i>
             </a>
@@ -115,7 +111,7 @@
                 <div class="projects-layer">
                     <h4>Breast Cancer Diagnosis API</h4>
                     <p>Application to determine breast cancer diagnosis</p>
-                    <s>Languages & Technologies: Python, Flask, Docker, Kubernetes</s>
+                    <s>Languages & Technologies: Python, Flask, Docker</s>
                     <a href="https://github.com/pranjaladhi/reports/tree/main/diagnosis_api" target="_blank" rel="noopener noreferrer">
                         <i class="fa-solid fa-arrow-up-right-from-square"></i>
                     </a>
