--- a/index.html
+++ b/index.html
@@ -58,31 +58,31 @@
         <h2 class="heading">Languages & Technologies</h2>
         
         <div class="LangAndTech-content">
-            <a href="" class="Icon">
+            <a href="#skills" class="Icon">
                 <div class="name">Python</div>
                     <i class='bx bxl-python'></i>
             </a>
-            <a href="" class="Icon">
+            <a href="#skills" class="Icon">
                 <div class="name">R</div>
                     <i class="fa-brands fa-r-project"></i>
             </a>
-            <a href="" class="Icon">
+            <a href="#skills" class="Icon">
                 <div class="name">C++</div>
                     <i class='bx bxl-c-plus-plus'></i>
             </a>
-            <a href="" class="Icon">
+            <a href="#skills" class="Icon">
                 <div class="name">HTML</div>
                     <i class='bx bxl-html5'></i>
             </a>
-            <a href="" class="Icon">
+            <a href="#skills" class="Icon">
                 <div class="name">CSS</div>
                     <i class='bx bxl-css3'></i>
             </a>
-            <a href="" class="Icon">
+            <a href="#skills" class="Icon">
                 <div class="name">Docker</div>
                     <i class='bx bxl-docker'></i>
             </a>
-            <a href="" class="Icon">
+            <a href="#skills" class="Icon">
                 <div class="name">Flask</div>
                     <i class='bx bxl-flask' ></i>
             </a>
