--- a/index.html
+++ b/index.html
@@ -58,31 +58,31 @@
         <h2 class="heading">Languages & Technologies</h2>
         
         <div class="LangAndTech-content">
-            <a href="" class="Icon">
+            <a href="#skills" class="Icon">
                 <div class="name">Python</div>
                     <i class='bx bxl-python'></i>
             </a>
-            <a href="" class="Icon">
+            <a href="#skills" class="Icon">
                 <div class="name">R</div>
                     <i class="fa-brands fa-r-project"></i>
             </a>
-            <a href="" class="Icon">
+            <a href="#skills" class="Icon">
                 <div class="name">C++</div>
                     <i class='bx bxl-c-plus-plus'></i>
             </a>
-            <a href="" class="Icon">
+            <a href="#skills" class="Icon">
                 <div class="name">HTML</div>
                     <i class='bx bxl-html5'></i>
             </a>
-            <a href="" class="Icon">
+            <a href="#skills" class="Icon">
                 <div class="name">CSS</div>
                     <i class='bx bxl-css3'></i>
             </a>
-            <a href="" class="Icon">
+            <a href="#skills" class="Icon">
                 <div class="name">Docker</div>
                     <i class='bx bxl-docker'></i>
             </a>
-            <a href="" class="Icon">
+            <a href="#skills" class="Icon">
                 <div class="name">Flask</div>
                     <i class='bx bxl-flask' ></i>
             </a>
@@ -136,7 +136,7 @@
                     <h4>Air Pollution Predictions</h4>
                     <p>Analysis of different models in predicting air pollution concentration in the U.S</p>
                     <s>Language: R</s>
-                    <a href="https://github.com/pranjaladhi/sds-322e/blob/main/project1/Project1.pdf" target="_blank" rel="noopener noreferrer">
+                    <a href="" target="_blank" rel="noopener noreferrer">
                         <i class="fa-solid fa-arrow-up-right-from-square"></i>
                     </a>
                 </div>
@@ -161,6 +161,21 @@
     <!-- experience section design -->
     <section class="experience" id="experience"></section>
         <h2 class="heading">Experience</h2>
+
+        <div class="company">
+            <h4>Apple</h4>
+            <div class="description">
+                <p>Test</p>
+            </div>
+        </div>
+
+        <div class="company">
+            <h4>Texas Department of Transportation</h4>
+            <div class="description">
+                <p>Test</p>
+            </div>
+        </div>
+
 
 
     <!-- contact section design -->
