--- a/index.html
+++ b/index.html
@@ -233,9 +233,8 @@
     <script src="https://unpkg.com/scrollreveal"></script>
 
     <!- typed js --
-    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script> -->
 
-    <!- custom js --
-    <script src="script.js"></script> -->
+    <script src="script.js"></script>
   </body>
 </html>
