--- a/index.html
+++ b/index.html
@@ -222,19 +222,18 @@
     <section class="experience" id="experience">
         <h2 class="heading">Experience</h2>
 
-        <div class="company">
-            <h4>Apple</h4>
-            <div class="description">
-                <p>Test</p>
+        <div class="timeline">
+            <div class="container">
+                <div class="text-box">
+                    <h4>Apple</h4>
+                    <small>February 2022 - Present</small>
+                    <p>Job description</p>
+                </div>
             </div>
         </div>
 
-        <div class="company">
-            <h4>Texas Department of Transportation</h4>
-            <div class="description">
-                <p>Test</p>
-            </div>
-        </div>
+
+
     </section>
 
 
