add timeline images and boxes

--- a/index.html
+++ b/index.html
@@ -223,13 +223,26 @@
         <h2 class="heading">Experience</h2>
 
         <div class="timeline">
-            <div class="container">
+            <div class="container left-container">
+                <img src="assets/images/newapple.png">
                 <div class="text-box">
                     <h4>Apple</h4>
                     <small>February 2022 - Present</small>
                     <p>Job description</p>
+                    <span class="left-container-arrow"></span>
                 </div>
             </div>
+
+            <div class="container right-container">
+                <img src="assets/images/txdot_edit2_1.png" alt="">
+                <div class="text-box">
+                    <h4>Texas Department of Transportation</h4>
+                    <small>May 2021 - August 2021</small>
+                    <p>Job description</p>
+                    <span class="right-container-arrow"></span>
+                </div>
+            </div>
+
         </div>
 
 
