change file name

--- a/index.html
+++ b/index.html
@@ -223,8 +223,10 @@
         <h2 class="heading">Experience</h2>
 
         <div class="timeline">
+            
+
             <div class="container left-container">
-                <img src="assets/images/newapple.png">
+                <img src="assets/images/apple.png">
                 <div class="text-box">
                     <h4>Apple</h4>
                     <small>February 2022 - Present</small>
@@ -234,7 +236,7 @@
             </div>
 
             <div class="container right-container">
-                <img src="assets/images/txdot_edit2_1.png" alt="">
+                <img src="assets/images/txdot.png" alt="">
                 <div class="text-box">
                     <h4>Texas Department of Transportation</h4>
                     <small>May 2021 - August 2021</small>
