add job descriptions

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
             <div class="projects-box">
                 <img src="/assets/images/bridge.jpg" alt="">
                 <div class="projects-layer">
-                    <h4>Water Quality Impact on Traffic Incidents Analysis</h4>
+                    <h4>Water Quality Impact on Traffic Incidents</h4>
                     <p>Exploring the relationship between water quality and traffic incidents in Austin, TX</p>
                     <s>Language: R</s>
                     <a href="https://github.com/pranjaladhi/sds-322e/blob/main/Project1.pdf" target="_blank" rel="noopener noreferrer">
@@ -229,7 +229,10 @@
                 <div class="text-box">
                     <h4>Apple</h4>
                     <small>February 2022 - Present</small>
-                    <p>Job description</p>
+                    <ul>
+                        <li>Troubleshoot and support macOS & iOS devices</li>
+                        <li>Achieved 97% accurate troubleshooting and resolution handling</li>
+                    </ul>
                     <span class="left-container-arrow"></span>
                 </div>
             </div>
@@ -239,7 +242,10 @@
                 <div class="text-box">
                     <h4>Texas Department of Transportation</h4>
                     <small>May 2021 - August 2021</small>
-                    <p>Job description</p>
+                    <ul>
+                        <li>Conducted on-site inspections of roadway components to ensure compliance</li>
+                        <li>Performed tests on materials used in construction and analyzed results to verify specifications</li>
+                    </ul>
                     <span class="right-container-arrow"></span>
                 </div>
             </div>
