--- a/index.html
+++ b/index.html
@@ -178,9 +178,44 @@
                     </a>
                 </div>
             </div>
-            
+
+            <div class="projects-box">
+                <img src="/assets/images/ISS.jpg" alt="">
+                <div class="projects-layer">
+                    <h4>ISS Tracker</h4>
+                    <p>Application to query real-time information regarding the International Space Station</p>
+                    <s>Languages & Technologies: Python, Flask, Docker</s>
+                    <a href="https://github.com/pranjaladhi/reports/tree/main/iss_tracker" target="_blank" rel="noopener noreferrer">
+                        <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                    </a>
+                </div>
+            </div>
         </div>
-    
+        <div class="projects-container2">
+            <div class="projects-box">
+                <img src="/assets/images/airpollution.jpg" alt="">
+                <div class="projects-layer">
+                    <h4>Air Pollution Predictions</h4>
+                    <p>Analysis of different models in predicting air pollution concentration in the U.S</p>
+                    <s>Language: R</s>
+                    <a href="https://github.com/pranjaladhi/sds-322e/blob/main/Project2.pdf" target="_blank" rel="noopener noreferrer">
+                        <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                    </a>
+                </div>
+            </div>
+
+            <div class="projects-box">
+                <img src="/assets/images/bridge.jpg" alt="">
+                <div class="projects-layer">
+                    <h4>Water Quality Impact on Traffic Incidents</h4>
+                    <p>Exploring the relationship between water quality and traffic incidents in Austin, TX</p>
+                    <s>Language: R</s>
+                    <a href="https://github.com/pranjaladhi/sds-322e/blob/main/Project1.pdf" target="_blank" rel="noopener noreferrer">
+                        <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
     </section>
 
     <!-- experience section design -->
@@ -242,10 +277,10 @@
     <!-- scroll reveal -->
     <script src="https://unpkg.com/scrollreveal"></script>
 
-    <!- typed js --
+    <!-- typed js -->
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
 
-    <!- custom js --
-    <script src="script.js"></script> -->
+    <!-- custom js -->
+    <script src="script.js"></script>
   </body>
 </html>
