working contact page

--- a/index.html
+++ b/index.html
@@ -261,15 +261,15 @@
     <section class="contact" id="contact">
         <h2 class="heading">Contact Me</h2>
 
-        <form action="#">
+        <form action="https://getform.io/f/jawxpxob" method="POST">
             <div class="input-boxes">
-                <input type="text" placeholder="Name">
-                <input type="email" placeholder="Email Address">
+                <input type="text" placeholder="Name" name="name">
+                <input type="email" placeholder="Email Address" name="email">
             </div>
             <div class="input-boxes">
                 <input type="text" placeholder="Subject">
             </div>
-            <textarea name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
+            <textarea name="message" id="" cols="30" rows="10" placeholder="Message"></textarea>
             <input type="submit" value="Send" class="btn">
         </form>
     </section>    
